tests/sumo/meso/junction_control/tls_coordination/bad/control/output.sumo
Loading net-file from 'net.net.xml'... done (2ms).
Loading additional-files from 'input_additional.add.xml'... done (0ms).
Loading done.
Simulation started with time: 0.00
Simulation ended at time: 198.00
Reason: All vehicles have left the simulation.
Performance: 
 Duration: 3ms
 Real time factor: 66000
 UPS: 736000.000000
Vehicles: 
 Inserted: 30
 Running: 0
 Waiting: 0
Statistics (avg):
 RouteLength: 300.00
 Duration: 73.60
 WaitingTime: 4.93
 TimeLoss: 51.50
 DepartDelay: 0.00

